# mocap2odom

./: CMakeLists.txt  package.xml
launch/: .rf.launch.swp
launch/A01/: A01_compass_full_sys.launch  A01_edgar_record.launch  A01_load_params.launch  A01_radar.launch  A01_rf.launch  A01_vins_full_sys.launch
launch/A02/: A02_full_sys.launch  A02_load_params.launch  A02_rf.launch  A02_topic_rename_wifi.launch
launch/old_launchfiles/: compass_subt_mocap.launch  compass_subt_optitrack.launch  rf.launch  subt_full_sys.launch  subt_mocap.launch
launch/record/: octo_record.launch  odom_record.launch  pcl_record.launch  record.launch
launch/urban/: urban_rosflight.launch  urban_rosflight_load_params.launch
params/: A02_rf_params.yml
src/: OptiTrack2odom.cpp  Vicon2odom.cpp  odom2transform.cpp
